--- a/hosting/android/app/src/main/AndroidManifest.xml
+++ b/hosting/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     package="com.webbpulse.inventory.android"
     <application
-        android:label="webbpulse_inventory_management"
+        android:label="Webbpulse Inventory Management"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
