--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: Build and Deploy
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -17,8 +17,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.12' 
-          # this error will happen if python is not set up or if the pip package relevent to the deploy is not found
-          # Error: Failed to find location of Firebase Functions SDK. Did you forget to run '"C:\Users\tyler\Documents\GitHub\webbpulse_inventory_management\functions\venv\Scripts\activate.bat"  && python.exe -m pip install -r requirements.txt'?
       
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
@@ -33,8 +31,8 @@ jobs:
           cd hosting 
           flutter pub get
           cd ..
-
-      - name: Deploy Functions and Hosting and Firestore Rules
+      
+      - name: Deploy Web Hosting, Functions, and Firestore Rules
         env:
 
           FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
@@ -47,3 +45,4 @@ jobs:
           export GOOGLE_APPLICATION_CREDENTIALS=./functions/gcp_key.json
           firebase experiments:enable webframeworks
           firebase deploy --only hosting,functions,firestore:rules
+        
