--- a/.github/workflows/appstore-merge.yml
+++ b/.github/workflows/appstore-merge.yml
@@ -38,14 +38,14 @@ jobs:
     #Setup Keystore for signing
       - name: Decode Keystore
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > hosting/android/keystore.jks
           
       - name: Create key.properties
         run: |
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "storeFile=keystore.jks" >> android/key.properties
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > hosting/android/key.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> hosting/android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> hosting/android/key.properties
+          echo "keystore.jks" >> hosting/android/key.properties
 
       - name: Deploy Android App
         run: |
