--- a/.github/workflows/appstore-merge.yml
+++ b/.github/workflows/appstore-merge.yml
@@ -6,19 +6,29 @@ on:
       - appstore-deploy-testing
 
 jobs:
-  deploy:
+  build:
     name: Build and Deploy
     runs-on: macos-latest
+    env:
+        JAVA_VERSION: 17
+        FLUTTER_VERSION: 3.24.3
+        AAB_PATH: hosting/build/app/outputs/bundle/release/app-release.aab
+        FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
+        GOOGLE_APPLICATION_CREDENTIALS: gcp_key.json
+    
     steps:
       - name: Checkout Repo
         uses: actions/checkout@main
         
-        
+      - name: Set up gcp key
+        run: |
+          echo "$FIREBASE_APPLICATION_CREDENTIALS" > gcp_key.json
+
     #Setup flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@main
         with:
-          flutter-version: '3.24.3'
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: 'stable'
       
       - name: Install flutter dependencies
@@ -29,10 +39,10 @@ jobs:
         
     #setup java for android build
       - name: Set Up Java
-        uses: actions/setup-java@v3.12.0
+        uses: actions/setup-java@main
         with:
           distribution: 'oracle'
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
 
     #Setup Keystore for signing
       - name: Decode Keystore
