Delete redundant and no longer used firebase.json file

--- a/firebase.json
+++ b/firebase.json
@@ -34,17 +34,25 @@
       "android": {
         "default": {
           "projectId": "webbpulse-inventory-management",
-          "appId": "1:1096617861007:android:f3b83c36fe32290e9a75fa",
+          "appId": "1:1096617861007:android:e2ec1a741fb648169a75fa",
           "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "ios": {
+        "default": {
+          "projectId": "webbpulse-inventory-management",
+          "appId": "1:1096617861007:ios:50c7a1ceaf0158b69a75fa",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
         }
       },
       "dart": {
         "lib/firebase_options.dart": {
           "projectId": "webbpulse-inventory-management",
           "configurations": {
-            "android": "1:1096617861007:android:f3b83c36fe32290e9a75fa",
-            "ios": "1:1096617861007:ios:94be2186aa341d329a75fa",
-            "web": "1:1096617861007:web:b7d00eb71b0e024a9a75fa"
+            "android": "1:1096617861007:android:e2ec1a741fb648169a75fa",
+            "ios": "1:1096617861007:ios:50c7a1ceaf0158b69a75fa",
+            "web": "1:1096617861007:web:5d45f0a0d485927b9a75fa"
           }
         }
       }
