--- a/.github/workflows/appstore-merge.yml
+++ b/.github/workflows/appstore-merge.yml
@@ -12,7 +12,7 @@ jobs:
     env:
         JAVA_VERSION: 17
         FLUTTER_VERSION: 3.24.3
-        AAB_PATH: hosting/build/app/outputs/bundle/release/app-release.aab
+        AAB_PATH: flutter/build/app/outputs/bundle/release/app-release.aab
         FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
         GOOGLE_APPLICATION_CREDENTIALS: gcp_key.json
     
@@ -33,7 +33,7 @@ jobs:
       
       - name: Install flutter dependencies
         run: |
-          cd hosting 
+          cd flutter 
           flutter pub get
         
         
@@ -47,12 +47,12 @@ jobs:
     #Setup Keystore for signing
       - name: Decode Keystore
         run: |
-          cd hosting
+          cd flutter
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
           
       - name: Create key.properties
         run: |
-          cd hosting
+          cd flutter
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
@@ -60,7 +60,7 @@ jobs:
 
       - name: Deploy Android App
         run: |
-            cd hosting
+            cd flutter
             flutter build appbundle --release
 
       - name: Status Check
