--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: macos-latest
     env: 
         FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
-        GOOGLE_APPLICATION_CREDENTIALS: gcp_key.json
+        GOOGLE_APPLICATION_CREDENTIALS: /gcp_key.json
     steps:
       - name: Checkout Repo
         uses: actions/checkout@main
       
       - name: Set up gcp key
         run: |
-          echo "$FIREBASE_APPLICATION_CREDENTIALS" > gcp_key.json
+          echo "$FIREBASE_APPLICATION_CREDENTIALS" > /gcp_key.json
 
       - name: Set up python
         uses: actions/setup-python@main
