--- a/.github/workflows/appstore-merge.yml
+++ b/.github/workflows/appstore-merge.yml
@@ -6,8 +6,8 @@ on:
       - appstore-deploy-testing
 
 jobs:
-  build:
-    name: Build and Deploy
+  build_and_deploy_android_app:
+    name: Build and Deploy Android App
     runs-on: macos-latest
     env:
         JAVA_VERSION: 17
@@ -71,4 +71,4 @@ jobs:
           releaseFiles: flutter/build/app/outputs/bundle/release/app-release.aab
           releaseName: cicd testing
           track: internal
-          status: completed
+          status: draft
