--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -34,6 +34,7 @@ jobs:
                 run: |
                     cd flutter 
                     flutter pub get
+                    flutter build ios --no-codesign  #this is to do a pod install for my xcode build later
             
             -   name: Install the Apple certificate and provisioning profile
                 env:
@@ -71,7 +72,7 @@ jobs:
                 run: |
                     cd flutter
                     xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath ../build/ios/archive/Runner.xcarchive
-                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive-exportOptionsPlist ios/exportOptions.plist -exportPath ios/ipa
+                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive-exportOptionsPlist ios/exportOptions.plist -exportPath ipa
 
             -   name: verify the build
                 run: |
