--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -34,7 +34,8 @@ jobs:
                 run: |
                     cd flutter 
                     flutter pub get
-                    flutter build ios --no-codesign  #this is to do a pod install for my xcode build later
+                    cd ios
+                    pod install
             
             -   name: Install the Apple certificate and provisioning profile
                 env:
