--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -30,12 +30,26 @@ jobs:
                     flutter-version: ${{ env.FLUTTER_VERSION }}
                     channel: 'stable'
             
+
+            -   name: Cache CocoaPods
+                uses: actions/cache@v3
+                with:
+                    path: ios/Pods
+                    key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+                    restore-keys: |
+                        ${{ runner.os }}-pods-
+            
+            -   name: Install CocoaPods dependencies
+                run: |
+                    cd ios
+                    pod install
+                    cd ..
+            
+            
             -   name: Install flutter dependencies
                 run: |
                     cd flutter 
                     flutter pub get
-                    cd ios
-                    pod install
             
             -   name: Install the Apple certificate and provisioning profile
                 env:
@@ -73,7 +87,7 @@ jobs:
                 run: |
                     cd flutter
                     xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath ../build/ios/archive/Runner.xcarchive
-                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive-exportOptionsPlist ios/exportOptions.plist -exportPath ipa
+                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
 
             -   name: verify the build
                 run: |
