--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -41,7 +41,7 @@ jobs:
             
             -   name: Install CocoaPods dependencies
                 run: |
-                    cd ios
+                    cd flutter/ios
                     pod install
                     cd ..
             
