--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -82,7 +82,7 @@ jobs:
             -   name: Build IOS App
                 run: |
                     cd flutter
-                    xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath ../build/ios/archive/Runner.xcarchive
+                    xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive
                     xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
 
             -   name: verify the build
