--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -11,7 +11,6 @@ jobs:
         runs-on: macos-latest
         env:
             FLUTTER_VERSION: 3.24.3
-            IPA_PATH: flutter/build/app/outputs/bundle/release/app-release.aab  # This is a placeholder, the actual path will be different
             FIREBASE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_APPLICATION_CREDENTIALS }}
             GOOGLE_APPLICATION_CREDENTIALS: gcp_key.json
         
@@ -29,16 +28,6 @@ jobs:
                 with:
                     flutter-version: ${{ env.FLUTTER_VERSION }}
                     channel: 'stable'
-            
-
-            -   name: Cache CocoaPods
-                uses: actions/cache@v3
-                with:
-                    path: ios/Pods
-                    key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-                    restore-keys: |
-                        ${{ runner.os }}-pods-
-            
             
             -   name: Install flutter dependencies
                 run: |
@@ -79,13 +68,19 @@ jobs:
                 
                 
             #build and release 
-            -   name: Build IOS App
+            -   name: Build The Archive
                 run: |
                     cd flutter
                     xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive
-                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
-
-            -   name: verify the build
+                    
+            -   name: Export the archive to IPA
                 run: |
                     cd flutter
-                    echo "Build successful"
+                    xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
+
+            -   name: Upload to App Store
+                env:
+                    APPLE_ID: ${{ secrets.APPLE_ID }}
+                    APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+                run: |
+                    xcrun altool --upload-app -f path/to/your_app.ipa -t ios -u "$APPLE_ID" -p "$APPLE_APP_PASSWORD"
