--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+.vscode/
 
 # IntelliJ related
 *.iml
@@ -30,7 +31,6 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /flutter/build/
-/flutter/ipa/
 
 # Symbolication related
 app.*.symbols
