--- a/.github/workflows/appstore-testing-merge.yml
+++ b/.github/workflows/appstore-testing-merge.yml
@@ -21,7 +21,7 @@ jobs:
             -   name: Upload to App Store
                 env:
                     APPLE_ID: ${{ secrets.APPLE_ID }}
-                    APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+                    APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
                 run: |
                     cd flutter
                     xcrun altool --upload-app -f ipa/webbpulse_inventory_management.ipa -t ios -u "$APPLE_ID" -p "$APPLE_APP_PASSWORD"
