--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -137,7 +137,7 @@ jobs:
           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
-              
+
       #Install Flutter dependencies
       - name: Install flutter dependencies
         run: |
@@ -171,14 +171,12 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profile
       #build and release
-      - name: Build The Archive
+      - name: Build IOS App
         run: |
           cd flutter
-          xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive -verbose
-      - name: Export the archive to IPA
-        run: |
-          cd flutter
+          xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive
           xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
+          
       - name: Upload to App Store
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
