--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -133,7 +133,7 @@ jobs:
       - name: Cache CocoaPods
         uses: actions/cache@v3
         with:
-          path: ios/Pods
+          path: flutter/ios/Pods
           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
@@ -143,8 +143,7 @@ jobs:
         run: |
           cd flutter 
           flutter pub get
-          cd ios
-          pod install
+          flutter build ios --no-codesign #fake run to fetch dependancies and update xcode configs
       - name: Install the Apple certificate and provisioning profile
         env:
           APPLE_DISTRIBUTION_CERTIFICATE_BASE64: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE_BASE64 }}
@@ -169,14 +168,17 @@ jobs:
           security list-keychain -d user -s $KEYCHAIN_PATH
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profile
-      #build and release
-      - name: Build IOS App
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      #build and release via xcode to support manual signing
+      - name: Build The Archive
         run: |
           cd flutter
-          xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive
+          xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/ios/archive/Runner.xcarchive -verbose
+      - name: Export the archive to IPA
+        run: |
+          cd flutter
           xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath ipa
-          
       - name: Upload to App Store
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
