--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -20,17 +20,23 @@ jobs:
       - name: Set Build Number
         run: |
           cd flutter
+          # Extract the current version from pubspec.yaml without any existing build number
           version_line=$(grep '^version: ' pubspec.yaml | cut -d '+' -f 1)
-          new_build_number=$(date +%Y%m%d%H%M%S)
+          
+          # Use the GitHub Actions run number as the build number
+          new_build_number="${{ github.run_number }}"
+          
+          # Construct the new version line
           new_version="${version_line}+${new_build_number}"
-      
-          # Use different sed command depending on the OS
+          
+          # Update the pubspec.yaml with the new version line, handling macOS and Linux differences
           if [[ "$RUNNER_OS" == "macOS" ]]; then
             sed -i '' "s/^version: .*/version: $new_version/" pubspec.yaml
           else
             sed -i "s/^version: .*/version: $new_version/" pubspec.yaml
           fi
-      
+          
+          # Output the new version for logging purposes
           echo "New version: $new_version"
 
         #Set up gcp keys
@@ -85,17 +91,23 @@ jobs:
       - name: Set Build Number
         run: |
           cd flutter
+          # Extract the current version from pubspec.yaml without any existing build number
           version_line=$(grep '^version: ' pubspec.yaml | cut -d '+' -f 1)
-          new_build_number=$(date +%Y%m%d%H%M%S)
+          
+          # Use the GitHub Actions run number as the build number
+          new_build_number="${{ github.run_number }}"
+          
+          # Construct the new version line
           new_version="${version_line}+${new_build_number}"
-      
-          # Use different sed command depending on the OS
+          
+          # Update the pubspec.yaml with the new version line, handling macOS and Linux differences
           if [[ "$RUNNER_OS" == "macOS" ]]; then
             sed -i '' "s/^version: .*/version: $new_version/" pubspec.yaml
           else
             sed -i "s/^version: .*/version: $new_version/" pubspec.yaml
           fi
-      
+          
+          # Output the new version for logging purposes
           echo "New version: $new_version"
 
       - name: Set up gcp key
@@ -159,17 +171,23 @@ jobs:
       - name: Set Build Number
         run: |
           cd flutter
+          # Extract the current version from pubspec.yaml without any existing build number
           version_line=$(grep '^version: ' pubspec.yaml | cut -d '+' -f 1)
-          new_build_number=$(date +%Y%m%d%H%M%S)
+          
+          # Use the GitHub Actions run number as the build number
+          new_build_number="${{ github.run_number }}"
+          
+          # Construct the new version line
           new_version="${version_line}+${new_build_number}"
-      
-          # Use different sed command depending on the OS
+          
+          # Update the pubspec.yaml with the new version line, handling macOS and Linux differences
           if [[ "$RUNNER_OS" == "macOS" ]]; then
             sed -i '' "s/^version: .*/version: $new_version/" pubspec.yaml
           else
             sed -i "s/^version: .*/version: $new_version/" pubspec.yaml
           fi
-      
+          
+          # Output the new version for logging purposes
           echo "New version: $new_version"
 
       #Setup flutter
