--- a/firebase.json
+++ b/firebase.json
@@ -66,6 +66,9 @@
     "firestore": {
       "port": 8080
     },
+    "pubsub": {
+      "port": 8085
+    },
     "ui": {
       "enabled": true
     },
