--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -164,7 +164,7 @@ jobs:
 
   build_and_deploy_ios_testflight_app:
     name: Build and Deploy Testflight IOS App
-    runs-on: macos-latest
+    runs-on: macos-14
     env:
       FLUTTER_VERSION: 3.29.3
 
